Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34218

Mariadb Galera cluster fails when replicating from Mysql 5.7 on use of DDL

    XMLWordPrintable

Details

    Description

      Similar to previous Jira issue MDEV-34180

      HOST: mysql, mysql 5.7.44 binlog_format=ROW
      HOST: m1, mariadb 10.6 GALERA NODE replicating from HOST mysql, Using_Gtid: No (log file and position)
      HOST: m2 mariadb 10.6 GALERA NODE
      HOST: m3 mariadb 10.6 GALERA NODE

      Run this command on mysql:

      CREATE TABLE `tt_mem` (
        `mem_id` bigint(20) NOT NULL,
        `mem_description` varchar(100) DEFAULT NULL,
        PRIMARY KEY (`mem_id`)
      ) ENGINE=MEMORY DEFAULT CHARSET=utf8mb4;
      

      Error on m1:

      2024-05-22 16:11:07 1 [ERROR] WSREP: Vote 0 (success) on 78cebda7-1876-11ef-896b-8a58fca50d36:2565 is inconsistent with group. Leaving cluster.
      

      Error on m2 and m3:

      2024-05-22 16:11:06 2 [ERROR] Error in Log_event::read_log_event(): 'Found invalid event in binary log', data_len: 42, event_type: -94
      2024-05-22 16:11:06 2 [ERROR] WSREP: applier could not read binlog event, seqno: 2565, len: 482
      

      OTHER COMMANDS THAT PRODUCE SIMILAR ERRORS

      CREATE TABLE `aa_tab` (
        `col1` int(11) NOT NULL,
        `col2` varchar(100) DEFAULT NULL,
        PRIMARY KEY (`col1`)
      ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;
      

      rename table aa_tab to dd_tab;
      

      alter table aa_tab add column col3 varchar(10) after col2;
      

      drop table aa_tab;
      

      grant select on *.* to `edward`@`%`;
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              edward Edward Stoever
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.